--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,13 @@
 asgiref==3.7.2
-Django==5.0.2
-sqlparse==0.4.4
-typing_extensions==4.9.0
-asgiref==3.7.2
 certifi==2024.2.2
 cffi==1.16.0
 charset-normalizer==3.3.2
 cryptography==42.0.5
 defusedxml==0.7.1
+diff-match-patch==20230430
 Django==5.0.2
 django-allauth==0.61.1
+django-import-export==4.0.0
 idna==3.6
 oauthlib==3.2.2
 pycparser==2.21
@@ -18,5 +16,6 @@ python3-openid==3.2.0
 requests==2.31.0
 requests-oauthlib==1.3.1
 sqlparse==0.4.4
+tablib==3.5.0
 typing_extensions==4.9.0
 urllib3==2.2.1
